css/the-big-picture.css
/*!
 * Start Bootstrap - The Big Picture HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
	margin-top: 50px;
	margin-bottom: 50px;
	background: none;
	color: white;
}

#phone
{
	width: 332px;
	height: 678px;
	position: absolute;
	left: 41%;
	top: 28%;
}

#store {
	max-width: 140px;
	height: auto;
}

#big-button {
	color: black;
}

#contact {
	color: black;
}

.smaller-buttons {
	color: black;
}

.navbar {
	background-color: white;
	color: black;
}

.full {
  background: url(https://static.pexels.com/photos/21014/pexels-photo.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

